--- a/pom.xml
+++ b/pom.xml
@@ -1,179 +1,176 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.archmix</groupId>
-        <artifactId>java-parent</artifactId>
-        <version>1.8.1</version>
-        <relativePath/>
-    </parent>
-
+  <parent>
     <groupId>org.archmix</groupId>
-    <artifactId>legolas-oss</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <artifactId>java-parent</artifactId>
+    <version>1.8.1</version>
+    <relativePath/>
+  </parent>
 
-    <modules>
-        <module>legolas-core</module>
-        <module>legolas-provided</module>
-        <module>legolas-docker</module>
-        <module>legolas-oracle</module>
-        <module>legolas-postgre</module>
-        <module>legolas-sqlserver</module>
-    </modules>
+  <groupId>org.archmix</groupId>
+  <artifactId>legolas-oss</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
-    <properties>
-        <jacksonVersion>2.9.8</jacksonVersion>
-        <h2.version>1.4.200</h2.version>
+  <modules>
+    <module>legolas-core</module>
+    <module>legolas-provided</module>
+    <module>legolas-docker</module>
+    <module>legolas-oracle</module>
+    <module>legolas-postgresql</module>
+    <module>legolas-sql</module>
+    <module>legolas-sqlserver</module>
+  </modules>
 
-        <legolasVersion>1.0.0-SNAPSHOT</legolasVersion>
-        <migramiVersion>0.0.4</migramiVersion>
-        <compozitorVersion>0.1.11</compozitorVersion>
-        <testcontainersVersion>1.14.2</testcontainersVersion>
-    </properties>
+  <properties>
+    <jacksonVersion>2.11.0</jacksonVersion>
+    <h2Version>1.4.199</h2Version>
 
-    <dependencyManagement>
-        <dependencies>
-            <!-- LEGOLAS -->
-            <dependency>
-                <artifactId>legolas-oracle</artifactId>
-                <groupId>org.archmix</groupId>
-                <version>${legolasVersion}</version>
-            </dependency>
-            <dependency>
-                <artifactId>legolas-postgre</artifactId>
-                <groupId>org.archmix</groupId>
-                <version>${legolasVersion}</version>
-            </dependency>
-            <dependency>
-                <artifactId>legolas-sqlserver</artifactId>
-                <groupId>org.archmix</groupId>
-                <version>${legolasVersion}</version>
-            </dependency>
-            <dependency>
-                <artifactId>legolas-docker</artifactId>
-                <groupId>org.archmix</groupId>
-                <version>${legolasVersion}</version>
-            </dependency>
-            <dependency>
-                <artifactId>legolas-core</artifactId>
-                <groupId>org.archmix</groupId>
-                <version>${legolasVersion}</version>
-            </dependency>
-            <dependency>
-                <artifactId>legolas-provided</artifactId>
-                <groupId>org.archmix</groupId>
-                <version>${legolasVersion}</version>
-            </dependency>
+    <legolasVersion>1.0.0-SNAPSHOT</legolasVersion>
+    <migramiVersion>0.0.7</migramiVersion>
+    <compozitorVersion>0.1.11</compozitorVersion>
+    <testcontainersVersion>1.14.2</testcontainersVersion>
+  </properties>
 
-            <dependency>
-                <groupId>org.testcontainers</groupId>
-                <artifactId>testcontainers-bom</artifactId>
-                <version>1.14.2</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
+  <dependencyManagement>
+    <dependencies>
+      <!-- LEGOLAS -->
+      <dependency>
+        <artifactId>legolas-oracle</artifactId>
+        <groupId>org.archmix</groupId>
+        <version>${legolasVersion}</version>
+      </dependency>
+      <dependency>
+        <artifactId>legolas-postgresql</artifactId>
+        <groupId>org.archmix</groupId>
+        <version>${legolasVersion}</version>
+      </dependency>
+      <dependency>
+        <artifactId>legolas-sql</artifactId>
+        <groupId>org.archmix</groupId>
+        <version>${legolasVersion}</version>
+      </dependency>
+      <dependency>
+        <artifactId>legolas-sqlserver</artifactId>
+        <groupId>org.archmix</groupId>
+        <version>${legolasVersion}</version>
+      </dependency>
+      <dependency>
+        <artifactId>legolas-docker</artifactId>
+        <groupId>org.archmix</groupId>
+        <version>${legolasVersion}</version>
+      </dependency>
+      <dependency>
+        <artifactId>legolas-core</artifactId>
+        <groupId>org.archmix</groupId>
+        <version>${legolasVersion}</version>
+      </dependency>
+      <dependency>
+        <artifactId>legolas-provided</artifactId>
+        <groupId>org.archmix</groupId>
+        <version>${legolasVersion}</version>
+      </dependency>
 
-            <dependency>
-                <artifactId>legolas-h2-sqlserver-starter</artifactId>
-                <groupId>org.archmix</groupId>
-                <version>${legolasVersion}</version>
-            </dependency>
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>testcontainers-bom</artifactId>
+        <version>1.14.2</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
 
-            <!-- JSON -->
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-databind</artifactId>
-                <version>${jacksonVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.datatype</groupId>
-                <artifactId>jackson-datatype-jdk8</artifactId>
-                <version>${jacksonVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-core</artifactId>
-                <version>${jacksonVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-annotations</artifactId>
-                <version>${jacksonVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-dataformat-yaml</artifactId>
-                <version>${jacksonVersion}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.datatype</groupId>
-                <artifactId>jackson-datatype-jsr310</artifactId>
-                <version>${jacksonVersion}</version>
-            </dependency>
+      <dependency>
+        <artifactId>legolas-h2-sqlserver-starter</artifactId>
+        <groupId>org.archmix</groupId>
+        <version>${legolasVersion}</version>
+      </dependency>
 
-            <dependency>
-                <groupId>com.h2database</groupId>
-                <artifactId>h2</artifactId>
-                <version>${h2.version}</version>
-                <scope>test</scope>
-            </dependency>
+      <!-- JSON -->
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jacksonVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.datatype</groupId>
+        <artifactId>jackson-datatype-jdk8</artifactId>
+        <version>${jacksonVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>${jacksonVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>${jacksonVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-dataformat-yaml</artifactId>
+        <version>${jacksonVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.datatype</groupId>
+        <artifactId>jackson-datatype-jsr310</artifactId>
+        <version>${jacksonVersion}</version>
+      </dependency>
 
-            <!-- COMPOZITOR -->
-            <dependency>
-                <groupId>org.archmix</groupId>
-                <artifactId>compozitor-oss</artifactId>
-                <version>${compozitorVersion}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
+      <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <version>${h2Version}</version>
+      </dependency>
 
-            <!-- MIGRAMI -->
-            <dependency>
-                <groupId>org.archmix</groupId>
-                <artifactId>migrami-oss</artifactId>
-                <version>${migramiVersion}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
+      <!-- COMPOZITOR -->
+      <dependency>
+        <groupId>org.archmix</groupId>
+        <artifactId>compozitor-oss</artifactId>
+        <version>${compozitorVersion}</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
 
-            <dependency>
-                <groupId>org.testcontainers</groupId>
-                <artifactId>testcontainers-bom</artifactId>
-                <version>${testcontainersVersion}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+      <!-- MIGRAMI -->
+      <dependency>
+        <groupId>org.archmix</groupId>
+        <artifactId>migrami-oss</artifactId>
+        <version>${migramiVersion}</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
-    <scm>
-        <connection>scm:git:git://github.com/archmix/${project.artifactId}.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/archmix/${project.artifactId}.git</developerConnection>
-        <tag>HEAD</tag>
-        <url>https://github.com/archmix</url>
-    </scm>
+  <scm>
+    <connection>scm:git:git://github.com/archmix/${project.artifactId}.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/archmix/${project.artifactId}.git</developerConnection>
+    <tag>HEAD</tag>
+    <url>https://github.com/archmix</url>
+  </scm>
 
-    <licenses>
-        <license>
-            <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 
-    <issueManagement>
-        <system>Github issue tracker</system>
-        <url>https://github.com/archmix/${project.artifactId}/issues</url>
-    </issueManagement>
+  <issueManagement>
+    <system>Github issue tracker</system>
+    <url>https://github.com/archmix/${project.artifactId}/issues</url>
+  </issueManagement>
 
-    <developers>
-        <developer>
-            <id>mrbraz</id>
-            <name>Anderson Braz</name>
-            <email>mrbraz@archmix.org</email>
-        </developer>
-    </developers>
+  <developers>
+    <developer>
+      <id>mrbraz</id>
+      <name>Anderson Braz</name>
+      <email>mrbraz@archmix.org</email>
+    </developer>
+  </developers>
 </project>
