--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.archmix</groupId>
     <artifactId>java-parent</artifactId>
     <version>1.8.2</version>
-    <relativePath/>
+    <relativePath />
   </parent>
 
   <groupId>org.archmix</groupId>
   <artifactId>legolas-oss</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -29,7 +28,7 @@
     <jacksonVersion>2.11.0</jacksonVersion>
     <h2Version>1.4.199</h2Version>
 
-    <legolasVersion>1.0.0-SNAPSHOT</legolasVersion>
+    <legolasVersion>1.0.1-SNAPSHOT</legolasVersion>
     <migramiVersion>0.0.7</migramiVersion>
     <compozitorVersion>0.1.11</compozitorVersion>
     <testcontainersVersion>1.14.2</testcontainersVersion>
