--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.archmix</groupId>
     <artifactId>java-parent</artifactId>
     <version>1.8.2</version>
-    <relativePath />
+    <relativePath/>
   </parent>
 
   <groupId>org.archmix</groupId>
@@ -29,7 +30,7 @@
     <h2Version>1.4.199</h2Version>
 
     <legolasVersion>1.0.3-SNAPSHOT</legolasVersion>
-    <migramiVersion>0.0.7</migramiVersion>
+    <migramiVersion>0.0.8</migramiVersion>
     <compozitorVersion>0.1.11</compozitorVersion>
     <testcontainersVersion>1.14.2</testcontainersVersion>
   </properties>
