--- a/legolas-sql/pom.xml
+++ b/legolas-sql/pom.xml
@@ -21,6 +21,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.archmix</groupId>
+      <artifactId>toolbox</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>com.zaxxer</groupId>
       <artifactId>HikariCP</artifactId>
       <version>${hikaricpVersion}</version>
