--- a/legolas-core/pom.xml
+++ b/legolas-core/pom.xml
@@ -24,6 +24,11 @@
 
     <dependency>
       <groupId>org.archmix</groupId>
+      <artifactId>toolbox</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.archmix</groupId>
       <artifactId>migrami-core</artifactId>
     </dependency>
 
