--- a/pom.xml
+++ b/pom.xml
@@ -26,13 +26,12 @@
   </modules>
 
   <properties>
-    <jacksonVersion>2.11.0</jacksonVersion>
-    <h2Version>1.4.199</h2Version>
-
     <legolasVersion>1.0.4-SNAPSHOT</legolasVersion>
-    <toolboxVersion>0.0.2-SNAPSHOT</toolboxVersion>
-    <migramiVersion>0.0.11-SNAPSHOT</migramiVersion>
-    <compozitorVersion>0.1.13-SNAPSHOT</compozitorVersion>
+    <toolboxVersion>0.0.2</toolboxVersion>
+    <migramiVersion>0.0.11</migramiVersion>
+    <compozitorVersion>0.1.13</compozitorVersion>
+
+    <jacksonVersion>2.11.0</jacksonVersion>
     <testcontainersVersion>1.14.2</testcontainersVersion>
   </properties>
 
@@ -83,10 +82,29 @@
         <scope>import</scope>
       </dependency>
 
+      <!-- TOOLBOX -->
       <dependency>
         <artifactId>toolbox</artifactId>
         <groupId>org.archmix</groupId>
         <version>${toolboxVersion}</version>
+      </dependency>
+
+      <!-- COMPOZITOR -->
+      <dependency>
+        <groupId>org.archmix</groupId>
+        <artifactId>compozitor-oss</artifactId>
+        <version>${compozitorVersion}</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+
+      <!-- MIGRAMI -->
+      <dependency>
+        <groupId>org.archmix</groupId>
+        <artifactId>migrami-oss</artifactId>
+        <version>${migramiVersion}</version>
+        <scope>import</scope>
+        <type>pom</type>
       </dependency>
 
       <!-- JSON -->
@@ -119,30 +137,6 @@
         <groupId>com.fasterxml.jackson.datatype</groupId>
         <artifactId>jackson-datatype-jsr310</artifactId>
         <version>${jacksonVersion}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>com.h2database</groupId>
-        <artifactId>h2</artifactId>
-        <version>${h2Version}</version>
-      </dependency>
-
-      <!-- COMPOZITOR -->
-      <dependency>
-        <groupId>org.archmix</groupId>
-        <artifactId>compozitor-oss</artifactId>
-        <version>${compozitorVersion}</version>
-        <scope>import</scope>
-        <type>pom</type>
-      </dependency>
-
-      <!-- MIGRAMI -->
-      <dependency>
-        <groupId>org.archmix</groupId>
-        <artifactId>migrami-oss</artifactId>
-        <version>${migramiVersion}</version>
-        <scope>import</scope>
-        <type>pom</type>
       </dependency>
     </dependencies>
   </dependencyManagement>
