Adding kafka module

--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.archmix</groupId>
     <artifactId>java-parent</artifactId>
     <version>1.8.2</version>
-    <relativePath />
+    <relativePath/>
   </parent>
 
   <groupId>org.archmix</groupId>
@@ -23,6 +24,7 @@
     <module>legolas-sql</module>
     <module>legolas-sqlserver</module>
     <module>legolas-mysql</module>
+    <module>legolas-kafka</module>
   </modules>
 
   <properties>
@@ -30,6 +32,8 @@
     <migramiVersion>0.0.12</migramiVersion>
     <compozitorVersion>0.1.14</compozitorVersion>
 
+    <kafkaVersion>2.6.0</kafkaVersion>
+    <jacksonVersion>2.11.3</jacksonVersion>
     <testcontainersVersion>1.14.2</testcontainersVersion>
   </properties>
 
@@ -83,6 +87,21 @@
         <version>1.14.2</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.kafka</groupId>
+        <artifactId>kafka-clients</artifactId>
+        <version>${kafkaVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>${jacksonVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.dataformat</groupId>
+        <artifactId>jackson-dataformat-yaml</artifactId>
+        <version>${jacksonVersion}</version>
       </dependency>
 
       <!-- COMPOZITOR -->
