--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
   <version>1.0.10-SNAPSHOT</version>
   <packaging>pom</packaging>
 
+  <name>Archmix Legolas Open Source Solution</name>
+  <description>Legolas helps you to create a reproducible development environment effortlessly.</description>
+  <url>https://archmix.org</url>
+
   <modules>
     <module>legolas-core</module>
     <module>legolas-provided</module>
@@ -29,7 +33,7 @@
   <properties>
     <legolasVersion>1.0.10-SNAPSHOT</legolasVersion>
     <migramiVersion>0.0.12</migramiVersion>
-    <compozitorVersion>0.1.14</compozitorVersion>
+    <compozitorVersion>0.1.17</compozitorVersion>
     <kafkaVersion>2.6.0</kafkaVersion>
     <jacksonVersion>2.11.3</jacksonVersion>
     <testcontainersVersion>1.16.3</testcontainersVersion>
