--- a/legolas-sql/pom.xml
+++ b/legolas-sql/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>legolas-oss</artifactId>
     <groupId>org.archmix</groupId>
-    <version>1.0.10-SNAPSHOT</version>
+    <version>1.0.13-SNAPSHOT</version>
   </parent>
 
   <artifactId>legolas-sql</artifactId>
@@ -18,6 +18,11 @@
     <dependency>
       <groupId>org.archmix</groupId>
       <artifactId>legolas-docker</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>jdbc</artifactId>
     </dependency>
 
     <dependency>
