--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,18 +3,19 @@ version: 2.1
 machine: true
 
 orbs:
-  maven: archmix/maven@2.1.4
+  maven: archmix/maven@2
 
 workflows:
   version: 2
   build-deploy:
     jobs:
-      - maven/build_machine:
+      - maven/build:
+          setup_remote_docker: true
           context: Archmix
       - maven/release:
           context: Archmix
           requires:
-            - maven/build_machine
+            - maven/build
           filters:
             branches:
               only: master
