--- a/legolas-kafka/pom.xml
+++ b/legolas-kafka/pom.xml
@@ -8,12 +8,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>legolas-kafka</artifactId>
+  <name>Legolas Kafka</name>
 
   <dependencies>
     <dependency>
       <groupId>org.archmix</groupId>
       <artifactId>legolas-docker</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>kafka</artifactId>
@@ -29,6 +31,12 @@
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-yaml</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.archmix</groupId>
+      <artifactId>legolas-provided</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
