--- a/legolas-oracle/pom.xml
+++ b/legolas-oracle/pom.xml
@@ -9,6 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>legolas-oracle</artifactId>
+  <name>Legolas Oracle</name>
 
   <dependencies>
     <!-- COMPILE -->
