--- a/legolas-postgresql/pom.xml
+++ b/legolas-postgresql/pom.xml
@@ -9,6 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>legolas-postgresql</artifactId>
+  <name>Legolas PostgreSQL</name>
 
   <dependencies>
     <dependency>
